@@ -26,7 +26,11 @@
 #include <QNetworkProxy>
 #include <QSslSocket>
 #include <QUrl>
+#if (QT_VERSION >= QT_VERSION_CHECK(5, 0, 0))
+#include <QDnsLookup>
+#else
 #include "qdnslookup.h"
+#endif
 
 #include "QXmppConfiguration.h"
 #include "QXmppConstants.h"
