@@ -25,7 +25,11 @@
 #include <QSslKey>
 #include <QSslSocket>
 #include <QTimer>
+#if (QT_VERSION >= QT_VERSION_CHECK(5, 0, 0))
+#include <QDnsLookup>
+#else
 #include "qdnslookup.h"
+#endif
 
 #include "QXmppConstants.h"
 #include "QXmppDialback.h"
