@@ -3,6 +3,7 @@ QXmpp 0.7.2 (Unreleased)
 
   - Handle Error replies in QXmppDiscoveryManager so that library users can know
     about errors.
+  - If building with Qt 5, use Qt's QDnsLookup instead of our backport.
 
 QXmpp 0.7.1 (Sep 3, 2012)
 -------------------------
